--- a/styles.css
+++ b/styles.css
@@ -132,3 +132,14 @@ select:hover {
     width: 70%;
     display: flex;
 }
+
+.formularioDIV {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+#finalizar-pedido {
+    text-decoration: none;
+}
